--- a/cjp_threadpool/Cargo.toml
+++ b/cjp_threadpool/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "day2"
+name = "cjp_threadpool"
 version = "0.1.0"
 authors = ["Chris Paterson <chris.paterson@metaswitch.com>"]
 edition = "2018"
@@ -7,6 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-itertools = "0.8"
-intcode = { path = "../intcode" }
-cjp_threadpool = { path = "../cjp_threadpool" }
+num_cpus = "1"
