--- a/intcode/Cargo.toml
+++ b/intcode/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "intcode-benchmark"
+harness = false
+path = "./src/bench.rs"
