--- a/intcode/Cargo.toml
+++ b/intcode/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 criterion = "0.3"
+tokio = { version = "0.2", features = ["stream", "sync"] }
 
 [[bench]]
 name = "intcode-benchmark"
