--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "(Windows) Launch",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/target/debug/day23.exe",
+            "program": "${workspaceRoot}/../rust-learn/target/debug/hello-world.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
